[package]
name = "tv_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
# CRITICAL: This exact version prevents the "Table Count" crash
wasm-bindgen = "=0.2.84"
console_error_panic_hook = "0.1"
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
  "KeyboardEvent",
  "WebGlRenderingContext", 
  "WebGlShader",           
  "WebGlProgram",          
  "WebGlBuffer",           
  "WebGlUniformLocation",  
  "WebGlTexture",
  "HtmlImageElement"
]}